[package]
name = "issues"
version = "0.1.0"
edition = "2024"
description = "An error reporting library for Rust"
license = "MIT"
authors = ["Geoff W <geoff@example.com>"]
repository = "https://github.com/geoffw/issues"
homepage = "https://github.com/geoffw/issues"
documentation = "https://docs.rs/issues"
readme = "README.md"
keywords = ["error", "reporting", "diagnostics", "errors"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
